syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2020 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "QueryHeader.proto";
import "ResponseHeader.proto";
import "Timestamp.proto";
import "Duration.proto";

/* Gets information about Token instance */
message TokenGetInfoQuery {
    QueryHeader header = 1; // Standard info sent from client to node, including the signed payment, and what kind of response is requested (cost, state proof, both, or neither)
    TokenID token = 2; // The token for which information is requested. If invalid token is provided, INVALID_TOKEN_ID response is returned.
}

/* The metadata about a Token instance */
message TokenInfo {
    TokenID tokenId = 1; // ID of the token instance
    string name = 2; // The name of the token. It is a string of ASCII only characters
    string symbol = 3; // The symbol of the token. It is a UTF-8 capitalized alphabetical string
    uint32 decimals = 4; // The number of decimal places a token is divisible by
    uint64 totalSupply = 5; // The total supply of tokens that are currently in circulation
    AccountID treasury = 6; // The ID of the account which is set as Treasury
    Key adminKey = 7; // The key which can perform update/delete operations on the token. If empty, the token can be perceived as immutable (not being able to be updated/deleted)
    Key kycKey = 8; // The key which can grant or revoke KYC of an account for the token's transactions. If empty, KYC is not required, and KYC grant or revoke operations are not possible.
    Key freezeKey = 9; // The key which can freeze or unfreeze an account for token transactions. If empty, freezing is not possible
    Key wipeKey = 10; // The key which can wipe token balance of an account. If empty, wipe is not possible
    Key supplyKey = 11; // The key which can change the supply of a token. The key is used to sign Token Mint/Burn operations
    TokenFreezeStatus defaultFreezeStatus = 12; // The default Freeze status (not applicable, frozen or unfrozen) of Hedera accounts relative to this token. FreezeNotApplicable is returned if Token Freeze Key is empty. Frozen is returned if Token Freeze Key is set and defaultFreeze is set to true. Unfrozen is returned if Token Freeze Key is set and defaultFreeze is set to false
    TokenKycStatus defaultKycStatus = 13; // The default KYC status (KycNotApplicable or Revoked) of Hedera accounts relative to this token. KycNotApplicable is returned if KYC key is not set, otherwise Revoked
    bool deleted = 14; // Specifies whether the token was deleted or not
    AccountID autoRenewAccount = 15; // An account which will be automatically charged to renew the token's expiration, at autoRenewPeriod interval
    Duration autoRenewPeriod = 16; // The interval at which the auto-renew account will be charged to extend the token's expiry
    Timestamp expiry = 17; // The epoch second at which the token will expire
}

/* Response when the client sends the node TokenGetInfoQuery */
message TokenGetInfoResponse {
    ResponseHeader header = 1; // Standard response from node to client, including the requested fields: cost, or state proof, or both, or neither
    TokenInfo tokenInfo = 2; // The information requested about this token instance
}
